# shoval_algo

./: readme.txt
BauotechAIConnectorDll/: AlgoApi.cpp  AlgoApi.h  BauotechAIConnectorDll.vcxproj  CMakeLists.txt  CObject.hpp  Kalman3.cpp  Kalman3.hpp  ManDetector.hpp  MoitionTrack.cpp  MotionTrack.hpp  alert.cpp  alert.hpp  algoDetection.cpp  algoDetection.hpp  algoProcess.cpp  algoProcess.hpp  concluder.cpp  concluder.hpp  config.hpp  const.hpp  cpp.hint  dasiamrpn_tracker.cpp  dasiamrpn_tracker.hpp  database.cpp  database.hpp  files.hpp  hungarian2.cpp  hungarian2.h  kalmanBallTracker.cpp  kf_bahnam.cpp  loadBalancer.cpp  loadBalancer.hpp  mog.cpp  mog.hpp  ofx_kalma.cpp  ofx_kalma.h  prediction.cpp  prediction.hpp  queuing.cpp  queuing.hpp  (+12 more)
BauotechAIConnectorDll/yolo/: YOLO_mngr.cpp  YOLO_mngr.hpp  YOLOv8.cpp  YOLOv8.hpp  yolo.hpp  yolo5.cpp  yolo5.hpp
ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj  cameras.json  draw.cpp  draw.hpp  drawPoly.cpp  tests.cpp  tests.hpp  utils.cpp  utils.hpp
